--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,24 @@
 {
-  "short_name": "MyApp",
-  "name": "My React App",
+  "name": "Portfolio",
+  "short_name": "Portfolio",
+  "description": "Personal Portfolio Website",
+  "start_url": "/Portfolio/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "/Portfolio/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "/Portfolio/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "scope": "/Portfolio/"
 }
